--- a/style.css
+++ b/style.css
@@ -1,4 +1,106 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 62.5%;
+    font-family: "Source Sans Pro", sans-serif, arial;
+}
+
+/*Header*/
+header {
+    min-height: 100vh;
+    width: 100%;
+    background-image: url(images/banner.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    filter: brightness(0.8);
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 4rem;
+}
+
+nav .nav-logo {
+    width: 25%;
+}
+
+nav .nav-links {
+    flex: 1;
+    text-align: left;
+}
+
+nav .nav-links ul {
+    list-style: none;
+    display: flex;
+    justify-content: end;
+}
+
+nav .nav-links ul li {
+    padding: 0 4rem;
+}
+
+nav .nav-links ul li::after {
+    content: "";
+    width: 0%;
+    height: 0.4rem;
+    background-color: #cc0000;
+    margin: auto;
+    display: flex;
+    transition: 0.7s ease-in-out;
+}
+
+nav .nav-links ul li:hover::after {
+    width: 100%;
+}
+
+nav .nav-links ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.8rem;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+}
+
+.title h1 {
+    font-size: 5rem;
+    text-transform: uppercase;
+}
+
+.title p {
+    font-size: 2rem;
+    width: 70%;
+}
+
+.title h1, p {
+    color: #000;
+    margin: 2rem auto;
+}
+
+.title button {
+    padding: 1.5rem;
+    margin: 2rem 0 0 0;
+    border-radius: .4rem;
+    outline: none;
+    border: 1px solid #cc0000;
+    background-color: #cc0000;
+    cursor: pointer;
+}
+
+.title button a {
+    color: #fff;
+    font-size: 1.4rem;
+}
+
+.title button:hover {
+    background-color: transparent;
+    transition: 0.6s;
 }
