--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@ h3 {
     font-size: 4rem;
 }
 
+h3 {
+    font-size: 3rem;
+}
+
 /*Header*/
-header {
+body > header {
     min-height: 100vh;
     width: 100%;
     background-image: url(images/banner.png);
@@ -112,13 +116,13 @@ nav .nav-links ul li a {
     transition: 0.6s;
 }
 
-.courses {
+section {
     width: 80%;
     margin: 8rem auto;
     text-align: center;
 }
 
-.courses p {
+section p {
     font-size: 2rem;
 }
 
@@ -134,7 +138,7 @@ nav .nav-links ul li a {
     width: 30%;
     margin: 0 1rem;
     padding: 2rem 1rem;
-    background-color: #fff3f3;
+    background-color: #f3f3f3;
     border-radius: 0.8rem;
     cursor: pointer;
     transition: 0.5s;
@@ -142,4 +146,55 @@ nav .nav-links ul li a {
 
 .course article:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.campus article {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.card {
+    width: 30%;
+    overflow: hidden;
+    border-radius: 0.8rem;
+    position: relative;
+    margin: 0 1rem;
+}
+
+.card img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.card .layer {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
+.card .layer:hover {
+    background-color: rgba(255, 0, 0, 0.6);
+}
+
+.card .layer h2 {
+    font-size: 3rem;
+    width: 100%;
+    font-weight: 600;
+    color: #fff;
+    bottom: 0;
+    left: 50%;
+    opacity: 0;
+    transform: translateX(-50%);
+    position: absolute;
+    transition: 0.8s;
+}
+
+.card .layer:hover h2 {
+    bottom: 49%;
+    opacity: 1;
 }
