--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ h3 {
 
 h3 {
     font-size: 3rem;
+    margin: 1.6rem auto;
+    text-transform: capitalize;
 }
 
 /*Header*/
@@ -197,4 +199,24 @@ section p {
 .card .layer:hover h2 {
     bottom: 49%;
     opacity: 1;
+}
+
+.facilities .facilities-items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.facilities-items article {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.facilities-items article img {
+    border-radius: 0.8rem;
+}
+
+.facilities-items article p {
+    margin: 0;
 }
